Stylesheets/style.css
/* ... */
@media only screen and (max-width: 492px) {
  #molotool-container {
    width: 2rem !important;
  }

  #molotool-container span {
    display: none;
    visibility: hidden;
  }

  #molotool-container img {
    position: relative;
    margin-top: -1.4rem !important;
  }

  .nav__left {
    text-align: left;
  }

  .nav__left label {
    display: none;
    visibility: hidden;
  }

  .header-buttons {
    position: absolute;
    top: 0.55rem;
    right: 0;
  }
}

#molotool-container {
  display: inline-block;
  height: 2rem;
  width: 7rem;
  margin-right: 0.3rem;
  background-color: #f1f1f1;
  border: 0.08rem solid #9d9d9d;
  border-radius: 0.4rem;
  -webkit-box-sizing: border-box; /* ≤ iOS4, ≤ Android  2.3 */
  -moz-box-sizing: border-box; /* FF1+ */
  box-sizing: border-box; /* Chrome, IE8, Opera, Safari 5.1*/
  user-select: none;
  -ms-user-select:none;
  -moz-user-select:none;
  -webkit-user-select:none;
  -webkit-touch-callout: none;
  cursor: pointer;
}

#molotool-container:hover {
  border: 0.08rem solid black;
}

#molotool-container:active {
  background-color: inherit;
}

#molotool-container span {
  display: block;
  color: #6f13c1;
  margin-top: 0.4rem;
  margin-left: 0.5rem;
  float: left;
}

#molotool-container img {
  height: 1.5rem;
  width: 1.5rem;
  margin-top: 0.2rem;
  margin-right: 0.2rem;
  float: right;
}

.nav__left {
  width: 28.4rem;
  padding-left: 8px;
}

.nav__right {
  width: calc(100% - 29.9rem);
  padding-left: 0.4rem;
  padding-right: 0.3rem;
}

.nav__right * {
  display: inline-block;
}

.nav__left *, .nav__right * {
  vertical-align: middle;
}

.header-buttons {
  height: 1.4rem;
  vertical-align: center;
  float: right;
}

#collection-select-button {
  background: #f1f1f1;
  width: 6.2rem !important;
}

.header-buttons button {
  font-size: 0.8rem;
  height: 1.4rem;
  vertical-align: center;
  background: #f1f1f1;
}

#motif-search {
  width: 12rem;
  font-size: 0.8rem;
  color: #3c3c3c;
  margin-left: 0.2rem;
  padding-left: 0.2rem;
  border: 0.08rem solid #9d9d9d;
  border-radius: 0.3rem;
  background-color: #e2e2e2;
}

#motif-search::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
  color: inherit;
  opacity: 1; /* Firefox */
}

#motif-search:-ms-input-placeholder { /* Internet Explorer 10-11 */
  color: inherit;
}

#motif-search::-ms-input-placeholder { /* Microsoft Edge */
  color: inherit;
}

#chosen-legend-container {
  height: 1.6rem;
  border-top: 0.04rem solid #9d9d9d;
  border-bottom: 0.04rem solid #9d9d9d;
  background-color: #e2e2e2;
  align-items: center;
}

#chosen-motif-list {
  width: 36rem;
  max-height: 9rem;
  overflow-y: scroll;
  white-space: normal;
}

#chosen-motif-list.subfamily-shown {
  width: 54rem !important;
}

.reset-chosen-motifs {
  display: inline-block;
  cursor: pointer;
  position: absolute;
  padding-bottom: 0.3rem;
  margin-left: 0.5rem;
  height: 0.8rem !important;
  background-color: #f1f1f1;
}

.chosen-legend-heading {
  text-align: center;
  width: 100%;
}

.motif-title span {
  white-space: pre;
}

.chosen-in-control {
  -webkit-box-sizing: border-box; /* ≤ iOS4, ≤ Android  2.3 */
  -moz-box-sizing: border-box; /* FF1+ */
  box-sizing: border-box; /* Chrome, IE8, Opera, Safari 5.1*/
  height: 3rem;
  max-width: 13rem;
  margin-bottom: 0.8rem;
  margin-right: 0.8rem;
  background-color: #e2e2e2;
  border-radius: 0.4rem;
}

.chosen-in-control .close {
  margin-top: 0.3rem;
  margin-left: 0.3rem;
  font-size: 1.18rem;
  border-radius: 0.25rem;
}

.chosen-in-control .close:hover {
  background-color: #afafaf;
}

.sp-replacer {
  background-color: white;
  width: 1.75rem !important;
  margin-top: -0.65rem;
  margin-left: 0.4rem;
  height: 1.05rem !important;
}

.sp-dd {
  height: 1.05rem;
  width: 0.4rem;
}

.description {
  position: absolute;
  margin-top: 0.26rem;
  margin-left: 0.5rem;
  font-size: 1rem;
}

.chosen-in-control .motif-title {
  display: block;
  font-size: 0.9rem;
  color: #180ea4;
}

.chosen-in-search {
  display: inline-block;
  -webkit-box-sizing: border-box; /* ≤ iOS4, ≤ Android  2.3 */
  -moz-box-sizing: border-box; /* FF1+ */
  box-sizing: border-box; /* Chrome, IE8, Opera, Safari 5.1*/
  width: 48.75%;
  margin: 0 0 0.3rem 1.25%;
  padding-left: 0.3rem;
  background-color: #e2e2e2;
  border-radius: 0.4rem;
  border: 0.04rem solid #9d9d9d;
}

.chosen-in-search .hocomoco-info {
  color: #180ea4;
  text-decoration: none;
}

.chosen-in-search:nth-of-type(1), .chosen-in-search:nth-of-type(2) {
  margin-top: 0.3rem !important;
}

.subfamily-shown .chosen-in-search {
  width: 32.5% !important;
  margin: 0 0 0.3rem 0.8%;
}

.subfamily-shown .chosen-in-search:nth-of-type(3) {
  margin-top: 0.3rem !important;
}

.chosen-in-search .close {
  display: inline;
  float: top;
  font-size: 0.9rem;
  margin-right: 0.3em;
  vertical-align: middle;
  cursor: pointer;
}

.chosen-in-search .motif-title {
  font-size: 0.9rem;
  display: inline-block;
  margin-top: -0.2rem;
}

.chosen-in-search :is(.hocomoco-info, span) {
  font-size: 0.8rem;
}

.close.mouseover {
  background-color: #afafaf !important;
  border-radius: 0.2rem !important;
}

.hocomoco-info {
  color: #180ea4;
  text-decoration: none;
}

#legend-container {
  border-bottom: 0.04rem solid #9d9d9d;
  border-radius: 0.58rem 0.58rem 0 0;
  height: 1.6rem;
  background-color: #e2e2e2;
}

.legend {
  font-size: 0.9rem;
  display: inline-block;
  margin-top: 0.3rem;
  vertical-align: top;
  height: 1.3rem;
}

.empty {
  visibility: hidden;
  display: none;
}

.suggestions {
  z-index: 11;
  width: 36.5rem;
  margin-left: -0.2rem;
  margin-top: 0.5rem;
  background-color: #f1f1f1;
  border: 0.04rem solid #9d9d9d;
  border-radius: 0.6rem;
  -webkit-box-shadow: 0 0.7rem 2rem 0.32rem rgba(0, 0, 0, 0.3);
  -moz-box-shadow: 0 0.7rem 2rem 0.32rem rgba(0, 0, 0, 0.3);
  box-shadow: 0 0.7rem 2rem 0.32rem rgba(0, 0, 0, 0.3);
}

.suggestions.subfamily-shown {
  width: 54.5rem !important;
}
/* ... */

